<resources>
    <string name="app_name">Smart Dispenser</string>

    <string name="debug_disclaimer">This window is solely for debug purposes. It exists because of lack of stable server, here shall be a map with working esp marked on.</string>
    <string name="debug_enter_id_client">Enter testing esp ID:</string>
    <string name="debug_testing_id_client">1</string>
    <string name="debug_enter_ip_server">Enter server IP:</string>
    <string name="debug_testing_ip_server">192.168.43.125</string>
    <string name="debug_enter_port">Enter server port:</string>
    <string name="debug_port">5000</string>
    <string name="debug_move_to_feeder">Connect</string>

    <string name="stock">Left in stock: %s kg</string>
    <string name="plate">Left on plate: %s kg</string>
    <string name="dispense_now">Dispense now</string>
    <string name="dispense_every">Feed every</string>
    <string name="minutes">minutes</string>
    <string name="apply">Apply</string>
    <string name="last_fed">Last fed at:\n%s</string>

    <string name="data_not_ready">Won\'t dispense \'til data is ready</string>
    <string name="no_connection_to_server">No connection to the server</string>
    <string name="please_wait">Please wait 10 seconds...</string>
    <string name="unexpected_error">Unexpected error\nIt\'s server\'s fault!</string>
</resources>